# prettyprinter

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CONTRIBUTORS.md  HLint.hs  Makefile  README.md  README.textile  ansi-wl-pprint.cabal  cabal.haskell-ci  cabal.project  import_wiki.lhs  quchens-wip-fork-of-ansi-wl-pprint.cabal  release  stack-older-snapshots.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  linters.yml  mhs-ci.yml  no-text.yml
Text/PrettyPrint/ANSI/: Example.hs  Leijen.hs
app/: Example.hs
aux/: flowchart  version-compatibility-macros.h
bench/: Main.hs
misc/: flowchart  version-compatibility-macros.h
prettyprinter/: CHANGELOG.md  prettyprinter.cabal
prettyprinter-ansi-terminal/: CHANGELOG.md  README.md  prettyprinter-ansi-terminal.cabal
prettyprinter-ansi-terminal/bench/: LargeOutput.hs
prettyprinter-ansi-terminal/misc/: version-compatibility-macros.h
prettyprinter-ansi-terminal/src/Data/Text/Prettyprint/Doc/Render/: Terminal.hs
prettyprinter-ansi-terminal/src/Data/Text/Prettyprint/Doc/Render/Terminal/: Internal.hs
prettyprinter-ansi-terminal/src/Prettyprinter/Render/: Terminal.hs
prettyprinter-ansi-terminal/src/Prettyprinter/Render/Terminal/: Internal.hs
prettyprinter-ansi-terminal/test/Doctest/: Main.hs
prettyprinter-compat-annotated-wl-pprint/: README.md  prettyprinter-compat-annotated-wl-pprint.cabal
prettyprinter-compat-annotated-wl-pprint/src/Text/PrettyPrint/Annotated/: Leijen.hs
prettyprinter-compat-ansi-wl-pprint/: CHANGELOG.md  README.md  prettyprinter-compat-ansi-wl-pprint.cabal
prettyprinter-compat-ansi-wl-pprint/src/Text/PrettyPrint/ANSI/: Leijen.hs
prettyprinter-compat-wl-pprint/: README.md  prettyprinter-compat-wl-pprint.cabal
prettyprinter-compat-wl-pprint/src/Text/PrettyPrint/: Leijen.hs
prettyprinter-convert-ansi-wl-pprint/: README.md  prettyprinter-convert-ansi-wl-pprint.cabal
prettyprinter-convert-ansi-wl-pprint/src/Data/Text/Prettyprint/Convert/: AnsiWlPprint.hs
prettyprinter-convert-ansi-wl-pprint/src/Prettyprinter/Convert/: AnsiWlPprint.hs
prettyprinter/app/: GenerateReadme.hs  MultilineTh.hs
prettyprinter/bench/: FasterUnsafeText.hs  Fusion.hs  LargeOutput.hs
prettyprinter/src/: Prettyprinter.hs
prettyprinter/src-text/Data/: Text.hs
prettyprinter/src-text/Data/Text/: IO.hs  Lazy.hs
prettyprinter/src-text/Data/Text/Lazy/: Builder.hs
prettyprinter/src/Data/Functor/Classes/: Pretty.hs
prettyprinter/src/Data/Text/Prettyprint/: Doc.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/: Internal.hs  Internal.hs-boot  Unicode.hs  Util.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/Internal/: Debug.hs  Diagnostic.hs  Type.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/Render/: ShowS.hs  String.hs  Text.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/Render/Tutorials/: StackMachineTutorial.hs  TreeRenderingTutorial.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/Render/Util/: Panic.hs  SimpleDocTree.hs  StackMachine.hs
prettyprinter/src/Data/Text/Prettyprint/Doc/Symbols/: Ascii.hs  Unicode.hs
prettyprinter/src/Prettyprinter/: Internal.hs  Util.hs
prettyprinter/src/Prettyprinter/Internal/: Debug.hs  Type.hs
prettyprinter/src/Prettyprinter/Render/: String.hs  Text.hs
prettyprinter/src/Prettyprinter/Render/Tutorials/: StackMachineTutorial.hs  TreeRenderingTutorial.hs
prettyprinter/src/Prettyprinter/Render/Util/: Panic.hs  SimpleDocTree.hs  StackMachine.hs
prettyprinter/src/Prettyprinter/Symbols/: Ascii.hs  Unicode.hs
prettyprinter/src/Prettyprinter/Util/Compat/: Text.hs
prettyprinter/src/Prettyprinter/Util/Compat/Text/: IO.hs  Lazy.hs
prettyprinter/src/Prettyprinter/Util/Compat/Text/Lazy/: Builder.hs
prettyprinter/test/Doctest/: Main.hs
prettyprinter/test/Testsuite/: Main.hs  StripTrailingSpace.hs
scripts/: benchmark  find-language-extensions  generate_readme  haddock  run_benchmark  upload-haddock-to-github-docdump
scripts/checks/: hlint  negated-cpp-macro-syntax  readme-was-generated  stylish-haskell
scripts/ci/checks/: readme-was-generated
scripts/ci/install/: hlint  stack
src/Data/Text/PrettyPrint/: Doc.hs
src/Data/Text/PrettyPrint/Doc/Display/: CommonMark.hs  Handle.hs  Html.hs  Html.todo-hs  Terminal.hs  Text.hs
src/Data/Text/PrettyPrint/Doc/Render/: CommonMark.hs  Html.hs  RenderM.hs  Terminal.hs  Text.hs
src/Text/PrettyPrint/: Leijen.hs
src/Text/PrettyPrint/ANSI/: Leijen.hs
wl-pprint/: wl-pprint.cabal
wl-pprint-ansi/: wl-pprint-ansi.cabal
wl-pprint-ansi/src/Data/Text/PrettyPrint/Doc/Render/: Terminal.hs
wl-pprint-ansi/src/Data/Text/Prettyprint/Doc/Render/: Terminal.hs
wl-pprint-compat-old/: README.md  wl-pprint-compat-old.cabal
wl-pprint-compat-old-annotated-wl-pprint/: README.md  wl-pprint-compat-old-annotated-wl-pprint.cabal
wl-pprint-compat-old-annotated-wl-pprint/src/Text/PrettyPrint/Annotated/: Leijen.hs
wl-pprint-compat-old-ansi/: wl-pprint-compat-old-ansi.cabal
wl-pprint-compat-old-ansi/src/Text/PrettyPrint/ANSI/: Leijen.hs
wl-pprint-compat-old/src/Text/PrettyPrint/: Leijen.hs
wl-pprint/app/: Example.hs  GenerateReadme.hs  MultilineTh.hs
wl-pprint/bench/: FasterUnsafeText.hs  Fusion.hs  Main.hs
wl-pprint/src/Data/Text/PrettyPrint/: Doc.hs
wl-pprint/src/Data/Text/PrettyPrint/Doc/: Unicode.hs
wl-pprint/src/Data/Text/PrettyPrint/Doc/Render/: CommonMark.hs  Html.hs  RenderM.hs  Text.hs
wl-pprint/src/Data/Text/Prettyprint/: Doc.hs
wl-pprint/src/Data/Text/Prettyprint/Doc/: Internal.hs  Unicode.hs  Util.hs
wl-pprint/src/Data/Text/Prettyprint/Doc/Render/: CommonMark.hs  Html.hs  RenderM.hs  Text.hs  TutorialExample.hs
wl-pprint/src/Data/Text/Prettyprint/Doc/Render/Tutorials/: StackMachineTutorial.hs  TreeRenderingTutorial.hs
wl-pprint/src/Data/Text/Prettyprint/Doc/Render/Util/: Panic.hs  SimpleDocTree.hs  StackMachine.hs
wl-pprint/test/Doctest/: Main.hs
wl-pprint/test/Testsuite/: Main.hs
