Name:                ansi-wl-pprint
Version:             0.6.7.3
Cabal-Version:       >= 1.6
Category:            User Interfaces, Text
Synopsis:            The Wadler/Leijen Pretty Printer for colored ANSI terminal output
Description:         This is a pretty printing library based on Wadler's paper "A Prettier Printer". It has been enhanced with support for ANSI terminal colored output using the ansi-terminal package.
License:             BSD3
License-File:        LICENSE
Extra-Source-Files:  README.textile
Author:              Daan Leijen, Max Bolingbroke
Maintainer:          Edward Kmett <ekmett@gmail.com>
Bug-Reports:         http://github.com/ekmett/ansi-wl-pprint/issues
Homepage:            http://github.com/ekmett/ansi-wl-pprint
Build-Type:          Simple

Source-Repository head
  Type: git
  Location: git://github.com/ekmett/ansi-wl-pprint.git

Flag NewBase
        Description:    Choose the new smaller, split-up base package with 6.10
        Default:        True

Flag Example
        Description:    Build the example application
        Default:        False


Library
        Exposed-Modules:        Text.PrettyPrint.ANSI.Leijen
        Ghc-Options:            -Wall -fno-warn-name-shadowing -fno-warn-unused-matches
        
        Build-Depends:          ansi-terminal >= 0.4.0 && < 0.7
        if flag(newbase)
                Build-Depends:  base >= 3 && < 5
        else
                Build-Depends:  base < 3

Executable ansi-wl-pprint-example
        Main-Is:                Text/PrettyPrint/ANSI/Example.hs
        
        Build-Depends:          ansi-terminal >= 0.4.0 && < 0.7
        if flag(newbase)
                Build-Depends:  base >= 3 && < 5
        else
                Build-Depends:  base < 3
        
        if !flag(example)
                Buildable:      False
