name:                ansi-wl-pprint
version:             0.6.7.3
cabal-version:       >= 1.6
category:            User Interfaces, Text
synopsis:            The Wadler/Leijen Pretty Printer for colored ANSI terminal output
description:         This is a pretty printing library based on Wadler's paper "A Prettier Printer". It has been enhanced with support for ANSI terminal colored output using the ansi-terminal package.
license:             BSD3
license-file:        LICENSE
extra-source-files:  README.textile
author:              Daan Leijen, Max Bolingbroke
maintainer:          Edward Kmett <ekmett@gmail.com>
bug-reports:         http://github.com/ekmett/ansi-wl-pprint/issues
homepage:            http://github.com/ekmett/ansi-wl-pprint
build-type:          Simple
tested-with:         GHC==7.11.*, GHC==7.10.2, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

source-repository head
  type: git
  location: git://github.com/ekmett/ansi-wl-pprint.git

flag NewBase
  description:    Choose the new smaller, split-up base package with 6.10
  default:        True

flag Example
  description:    Build the example application
  default:        False


library
  exposed-modules: Text.PrettyPrint.ANSI.Leijen
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-matches

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  else
    -- see also notes in Text.PrettyPrint.ANSI.Leijen
    build-depends: semigroups >= 0.1 && < 0.19
        
  build-depends: ansi-terminal >= 0.4.0 && < 0.7
  if flag(newbase)
    build-depends:  base >= 3 && < 5
  else
    build-depends:  base < 3

executable ansi-wl-pprint-example
  main-is: Text/PrettyPrint/ANSI/Example.hs
        
  build-depends: ansi-terminal >= 0.4.0 && < 0.7
  if flag(newbase)
    build-depends:  base >= 3 && < 5
  else
    build-depends:  base < 3
        
  if !flag(example)
    buildable:      False
