name:                quchens-wip-fork-of-ansi-wl-pprint
version:             0
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            The Wadler/Leijen Pretty Printer for colored ANSI terminal output
description:         This is a pretty printing library based on Wadler's paper "A Prettier Printer". It has been enhanced with support for ANSI terminal colored output using the ansi-terminal package.
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.textile
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/ansi-wl-pprint/issues
homepage:            http://github.com/quchen/ansi-wl-pprint
build-type:          Simple
tested-with:         GHC==7.11.*, GHC==7.10.2, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

source-repository head
  type: git
  location: git://github.com/quchen/ansi-wl-pprint.git


library
    exposed-modules: Data.Text.PrettyPrint.Doc
                   , Data.Text.PrettyPrint.Doc.Display.Text
                   , Data.Text.PrettyPrint.Doc.Display.Handle
    ghc-options: -Wall -fno-warn-name-shadowing -Wcompat
    hs-source-dirs: src

    build-depends:
          base
        , ansi-terminal >= 0.4.0 && < 0.7
        , text

executable example
    main-is: app/Example.hs
    build-depends:
          base
        , quchens-wip-fork-of-ansi-wl-pprint
        , ansi-terminal >= 0.4.0 && < 0.7

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base
        , doctest >= 0.10
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
