name:                prettyprinter-ansi-terminal
version:             0.1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            ANSI terminal backend for the modern, extensible and well-documented prettyprinter.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
                   , misc/version-compatibility-macros.h
author:              David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules:  Data.Text.Prettyprint.Doc.Render.Terminal
    ghc-options:      -Wall
    hs-source-dirs:   src
    include-dirs:     misc
    default-language: Haskell2010
    other-extensions:
          CPP
        , LambdaCase
        , OverloadedStrings


    build-depends:
          base < 127
        , ansi-terminal >= 0.4.0 && < 0.7
        , text
        , prettyprinter >= 0 && < 0.2

    if impl(ghc >= 8.0)
        ghc-options: -Wcompat

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base < 127
        , doctest >= 0.9
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    if impl (ghc < 7.10)
        buildable: False
        -- Doctest cannot search folders in old versions it seems :-(
