name:                prettyprinter-compat-annotated-wl-pprint
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Prettyprinter compatibility module for previous users of the annotated-wl-pprint package.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
                   , misc/version-compatibility-macros.h
                   , CONTRIBUTORS.md
author:              Daan Leijen, David Raymond Christiansen, David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules:  Text.PrettyPrint.Annotated.Leijen
    ghc-options:      -Wall
    hs-source-dirs:   src
    include-dirs:     misc
    default-language: Haskell2010
    other-extensions: CPP

    build-depends:
          base < 127
        , text
        , prettyprinter < 1.1
