name:                prettyprinter-compat-annotated-wl-pprint
version:             1.1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Drop-in compatibility package to migrate from »annotated-wl-pprint« to »prettyprinter«.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
                   , misc/version-compatibility-macros.h
author:              Daan Leijen, David Raymond Christiansen, David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC == 9.2.1, GHC==9.0.1, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules:  Text.PrettyPrint.Annotated.Leijen
    ghc-options:      -Wall
    hs-source-dirs:   src
    include-dirs:     misc
    default-language: Haskell2010
    other-extensions: CPP

    build-depends:
          base          >= 4.5 && < 5
        , text          >= 1.2
        , prettyprinter >= 1.7
