name:                prettyprinter-compat-ansi-wl-pprint
version:             1.1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Drop-in compatibility package to migrate from »ansi-wl-pprint« to »prettyprinter«.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
                   , CHANGELOG.md
author:              David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==9.12.2, GHC==9.10.3, GHC==9.8.4, GHC==9.6.7, GHC==9.4.8, GHC==9.2.8, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2

source-repository head
  type: git
  location: https://github.com/quchen/prettyprinter

library
    exposed-modules:  Text.PrettyPrint.ANSI.Leijen
    ghc-options:      -Wall
    hs-source-dirs:   src
    default-language: Haskell2010
    other-extensions:
          CPP
        , OverloadedStrings

    build-depends:
          base                        >= 4.5 && < 5
        , text                        >= 1.2
        , prettyprinter               >= 1.7.0
        , prettyprinter-ansi-terminal >= 1.1

    if !impl(ghc >= 8.0) && !impl(mhs)
        build-depends: semigroups >= 0.1
