name:                prettyprinter-convert-ansi-wl-pprint
version:             1.1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Converter from »ansi-wl-pprint« documents to »prettyprinter«-based ones.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
author:              David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules:  Data.Text.Prettyprint.Convert.AnsiWlPprint
    ghc-options:      -Wall
    hs-source-dirs:   src
    default-language: Haskell2010
    other-extensions:
          CPP
        , LambdaCase
        , OverloadedStrings

    build-depends:
          base >= 4.7 && < 5
        , text == 1.2.*
        , prettyprinter < 1.2
        , prettyprinter-ansi-terminal >= 1.1 && < 1.2
        , ansi-wl-pprint >= 0.6.7.4
        , ansi-terminal
