name:                prettyprinter-convert-ansi-wl-pprint
version:             1.1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Converter from »ansi-wl-pprint« documents to »prettyprinter«-based ones.
description:         See README.md
license:             BSD2
license-file:        LICENSE.md
extra-source-files:  README.md
author:              David Luposchainsky
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules:  Data.Text.Prettyprint.Convert.AnsiWlPprint
    ghc-options:      -Wall
    hs-source-dirs:   src
    default-language: Haskell2010
    other-extensions:
          CPP
        , LambdaCase
        , OverloadedStrings

    build-depends:
          base                        >= 4.7 && < 5
        , text                        >= 1.2
        , prettyprinter               >= 1
        , prettyprinter-ansi-terminal >= 1.1.1
        , ansi-wl-pprint              >= 0.6.8
        , ansi-terminal

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base    >= 4.7 && < 5
        , doctest >= 0.9
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    if impl (ghc < 7.10)
        buildable: False
        -- Doctest does not support searching through directories in old versions
