name:                wl-pprint-ansi
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            ANSI terminal renderer for the prettyprinter based on the work of Wadler/Leijen.
description:         See README.md
license:             BSD3
license-file:        ../LICENSE.md
extra-source-files:  ../README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Data.Text.PrettyPrint.Doc.Render.Terminal
    ghc-options: -Wall -Wcompat
    hs-source-dirs: src

    build-depends:
          base
        , ansi-terminal >= 0.4.0 && < 0.7
        , text
        , wl-pprint

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base
        , doctest >= 0.10
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
