name:                wl-pprint-ansi
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            ANSI terminal renderer for the Wadler/Leijen prettyprinter.
description:         See README.md
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Data.Text.PrettyPrint.Doc.Render.Terminal
    ghc-options: -Wall
    hs-source-dirs: src
    default-language: Haskell2010

    build-depends:
          base < 127
        , ansi-terminal >= 0.4.0 && < 0.7
        , text
        , wl-pprint

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base < 127
        , doctest >= 0.10
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
