name:                wl-pprint-ansi
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            ANSI terminal renderer for the Wadler/Leijen prettyprinter.
description:         See README.md
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.md
                   , aux/version-compatibility-macros.h
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1, GHC==7.10.3, GHC==7.10.2, GHC==7.8.4

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Data.Text.Prettyprint.Doc.Render.Terminal
    ghc-options: -Wall
    hs-source-dirs: src
    include-dirs: aux
    default-language: Haskell2010
    other-extensions: LambdaCase, OverloadedStrings

    build-depends:
          base < 127
        , ansi-terminal >= 0.4.0 && < 0.7
        , text
        , wl-pprint

    if impl(ghc >= 8.0)
        ghc-options: -Wcompat

test-suite doctest
    type: exitcode-stdio-1.0
    hs-source-dirs: test/Doctest
    main-is: Main.hs
    build-depends:
          base < 127
        , doctest >= 0.9
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    if impl (ghc < 7.10)
        buildable: False
        -- Doctest cannot search folders in old versions it seems :-(
