name:                wl-pprint-compat-old-ansi
version:             1
cabal-version:       >= 1.10
category:            User Interfaces, Text
synopsis:            Compatibility between the new/old wl-pprint-ansi packages.
description:         See README.md
license:             BSD3
license-file:        LICENSE.md
extra-source-files:  README.md
author:              Daan Leijen, Max Bolingbroke, Edward Kmett
maintainer:          David Luposchainsky <dluposchainsky at google>
bug-reports:         http://github.com/quchen/prettyprinter/issues
homepage:            http://github.com/quchen/prettyprinter
build-type:          Simple
tested-with:         GHC==8.0.1, GHC==7.10.3, GHC==7.10.2, GHC==7.8.4

source-repository head
  type: git
  location: git://github.com/quchen/prettyprinter.git

library
    exposed-modules: Text.PrettyPrint.ANSI.Leijen
    ghc-options: -Wall
    hs-source-dirs: src
    default-language: Haskell2010

    build-depends:
          base < 127
        , text
        , wl-pprint
        , wl-pprint-ansi
